# kg-tools

./: .dockerignore  .gitignore  .gitlab-ci.yml  README.md  server.py  tool.ttl
FLORA/: .dockerignore  Dockerfile  Makefile  README.md  main.py
LIMES/: DockerfileAirflow  example.sh
REL/: DockerfileAirflow  Makefile  README.md  test.py
_data-util/: csv2rdf.py
_example/: README.md
_scripts/: build  create_docker_images.sh  gen_ci.sh  run_docker_containers.sh  test
_scripts/_data-util/: pyproject.toml
_tool-wrapper/: app.py
_viz/: dump.js  editor.html  graph.html  view.html
agreementmaker/: DockerfileAirflow  DockerfileFlask  Makefile  README.md  config.json  simplestInstall.md
corenlp/: Dockerfile  Makefile  README.md
dbpedia-spotlight/: Makefile  dockerfile  spotlight.sh  start.sh  test.sh
dedup/: data_matching_learned_settings  data_matching_output.csv  data_matching_training.json  entry.py  requirements.txt
deepmatcher/: README.md
falcon/: DockerfileAirflow  Makefile  README.md  requirements.txt  simplestInstall.md
jedai/: server.py  simple_auto_er.py  simple_em.py  simple_om.py
limes/: Dockerfile  README.md
magellan/: DockerfileAirflow  Makefile  README.md  data_exploration.py  data_profiling.py  downsampling.py  simplestInstall.md
paris/: Dockerfile  DockerfileAirflow  Makefile  README.md  config.json  example-setting.ini  paris_wrapper.sh  simplestInstall.md
pellet/: Dockerfile  README.md
pyjedai/: Makefile  (+10 more)
stanford-openie/: Dockerfile  DockerfileAirflow  Makefile  README.md  corenlp  extract.py  pyproject.toml  run  server.py
(+71 files in other folders)
