[tool.poetry]
name = "stanford-openie-service"
version = "0.1.0"
description = ""
authors = ["Marvin Hofer <vehnem@yahoo.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
stanford-openie = "^1.3.2"
uvicorn = "^0.32.0"
blacksheep = "^2.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
